# stack-depth-analyzer

./: Cargo.toml  README.md
src/: main.rs
src/elf_parser/: mod.rs
src/symex_adapter/: mod.rs
test_sources/program1/: Cargo.toml
test_sources/program1/.cargo/: config.toml
test_sources/program1/src/: main.rs
tests/assets/: ex4  program1
tests/assets/sources/ex4/: Cargo.toml
tests/assets/sources/ex4/src/: main.rs
tests/assets/sources/program1/: Cargo.toml
tests/assets/sources/program1/src/: main.rs
