[package]
name = "stack-depth-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
symex = { git = "https://github.com/ivajon/symex.git", branch = "trivial_stack_size" }
clap = { version = "4.5.26", features = ["derive"] }
gimli = { version = "0.27", features = ["std"] }
object = "0.30"


[profile.dev]
debug = true
opt-level = 0
