[package]
name = "program1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
symex_lib = { git = "https://github.com/ivajon/symex", branch = "trivial_stack_size" }
valid_derive = { git = "https://github.com/ivajon/symex" }

panic-halt = "1.0.0"

[dependencies.nrf52840-hal]
features = ["rt"]
version = "0.18.0"


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true
